# research-topics-analyst-with-crewai

./: .gitignore  README.md  pyproject.toml  report.md
src/intelligent_report_vulnerability/: crew.py  main.py
src/intelligent_report_vulnerability/config/: agents.yaml
