[project]
name = "intelligent_report_vulnerability"
version = "0.1.0"
description = "intelligent_report_vulnerability using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.8.1",
]

[project.scripts]
intelligent_report_vulnerability = "intelligent_report_vulnerability.main:run"
run_crew = "intelligent_report_vulnerability.main:run"
train = "intelligent_report_vulnerability.main:train"
replay = "intelligent_report_vulnerability.main:replay"
test = "intelligent_report_vulnerability.main:test"
run_with_trigger = "intelligent_report_vulnerability.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
